--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 Aman Kumar 
             </a>
             <div class="navbar-nav flex-row flex-wrap justify-content-center">
-                <a class="nav-item nav-link" href="pdfs/Aman Kumar_Resume_Dec.pdf" title="CV">Resume</a>
+                <a class="nav-item nav-link" href="pdfs/AmanKumar_full stack_jan.pdf" title="CV">Resume</a>
             </div>
         </nav>
     </div>
