--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Aman Kumar</title>
-    <meta name="description" content="Chirag Bolakani's personal and professional portfolio.">
-    <meta name="author" content='Chirag Bolakani'>
+    <meta name="description" content="Aman Kumar personal and professional portfolio.">
+    <meta name="author" content='Aman Kumar'>
 
     <!-- Font and styling links -->
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
@@ -62,7 +62,7 @@
     <div class="container mt-5">
 
         <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
-            <a class="navbar-brand mx-0 mr-sm-auto" href="" title="Chirag Bolakani">
+            <a class="navbar-brand mx-0 mr-sm-auto" href="" title="Aman Kumar">
                 Aman Kumar 
             </a>
             <div class="navbar-nav flex-row flex-wrap justify-content-center">
@@ -102,22 +102,7 @@
 
             <div id="technical-experience">
                 <h2>Technical Experience</h2>
-                <!-- <h3>Associate Software Engineer I</h3>
-                <p><strong>Synoriq — Nov 2024 - Present</strong></p>
-                <ul>
-                    <li>Developed and maintained the Django backend including more than 100 REST HTTP Endpoints.</li>
-                    <li>Leveraged Google OAuth2 to integrate the authentication, allowing streamlined login and
-                        registration processes.</li>
-                    <li>Developed an asynchronous WebSocket endpoint for real-time user prompt handling. Leveraged
-                        Python generators for efficient streaming, optimizing performance and reducing latency.</li>
-                    <li>Reduced average query time by over 60%, from 8 seconds to 3 seconds, boosting user experience
-                        and system responsiveness.</li>
-                    <li>Managed document and image upload workflows, integrating with Amazon S3 for secure storage and
-                        accessibility.</li>
-                    <li>Integrated Google Drive API, to facilitate document access and permission management, ensuring
-                        secure and efficient handling of external files.</li>
-                </ul> -->
-
+               
                 <h3>Sotware Engineer</h3>
                 <p><strong>Osfin.ai — Nov 2023 - Oct 2024, Bengluru, India</strong></p>
                 <ul>
@@ -156,39 +141,8 @@
                     <li>Designed user-friendly and responsive UI using HTML, CSS, and JavaScript to interact with the backend.</li>
                     <li>Integrated JWT authentication for secure user login and role-based access control to manage employee records.</li>
                     <li>Utilized Django's class-based views for efficient handling of CRUD operations and easy maintainability.</li>
-                    <!-- <li>Deployed the application on AWS, ensuring scalability and robust performance for a production-ready system.</li> -->
                 </ul>
-                <!--  
-                <h4>Human Presence Detection Using RF Signals, Oct 2022 - Jan 2023</h4>
-                <a href="https://drive.google.com/file/d/1jbpX66PFpYRuhMGE3HMnbvfvVToYpc6G/view?usp=share_link"><i
-                        class='fas fa-external-link-square-alt' style="margin-right: 10px"></i></a>
-                <ul>
-                    <li>A Collected Received Signal Strength Indicator (RSSI) from Esp32 and applied various statistical
-                        parameters
-                        over the RF Signal and successfully detected the presence/absence of a Human in an controlled
-                        environment.</li>
-                </ul>
-                <h4>Lung Capacity Check - Spirometry for Pulmonary Function Test,
-                    Oct 2021 - Apr 2022</h4>
-                <a href="https://drive.google.com/file/d/1OUbGIQd1oSvXw2PWBvxbI3xtWYhyVGJj/view?usp=share_link"><i
-                        class='fas fa-external-link-square-alt' style="margin-right: 10px;"></i></a>
-                <a href="https://github.com/ChiragBolakani/LungCapacityCheck"><i class="fab fa-github"></i></a>
-                <ul>
-                    <li>Innovated a low-cost solution to calculate Spirometry parameters by leveraging Bernoulli-Venturi
-                        Principle as
-                        well as performs Incentive Spirometry. Utilised MongoDB and Matplotlib to analyze the patients'
-                        results.</li>
-                </ul>
-                <h4>Automation Society Security Task,
-                    Dec 2020 - Mar 2021</h4>
-                <a href="https://drive.google.com/file/d/1b1iw1-kBhVvgZOT5LvE3FPRnhdqgBvto/view"><i
-                        class='fas fa-external-link-square-alt' style="margin-right: 10px;"></i></a>
-                <ul>
-                    <li>Extracted Channel State Information(Phase and Amplitude) from Intel IWL5300 NIC using Linux CSI
-                        Tool and
-                        ESP32 for Activity Recognition.</li>
-                    <li>Applied Hampel Identifier and running mean on CSI Data.</li>
-                </ul> -->
+              
             </div>
 
             <hr class="dashed">
